# enigma_rewrite

./: .gitignore  .gitmodules  README.md  testing ideas.py  tests.xlsx  write_up.docx  write_up_cut.docx  ~$ite_up.docx  ~WRL0003.tmp
data/: final1gram.json  final2gram.json  final3gram.json
data/english/enigmable/: 10001.txt  10002.txt  10003.txt  10004.txt  10005.txt  10006.txt  10008.txt  10009.txt  10010.txt  10011.txt  10013.txt  10014.txt  10015.txt  10016.txt  10017.txt  10018.txt  10019.txt  10020.txt  10021.txt  10022.txt  10023.txt  10024.txt  10025.txt  10027.txt  10029.txt  10030.txt  10032.txt  10033.txt  10034.txt  10035.txt  10036.txt  10037.txt  10038.txt  10039.txt  10040.txt  10041.txt  10042.txt  10043.txt  10044.txt  10045.txt  (+67 more)
data/english/readable/: 10001.txt  10002.txt  10003.txt  10004.txt  10005.txt  10006.txt  10008.txt  10009.txt  10010.txt  10011.txt  10013.txt  10014.txt  10015.txt  10016.txt  10017.txt  10018.txt  10019.txt  10020.txt  10021.txt  10022.txt  10023.txt  10024.txt  10025.txt  10027.txt  10029.txt  10030.txt  10032.txt  10033.txt  10034.txt  10035.txt  10036.txt  10037.txt  10038.txt  10039.txt  10040.txt  10041.txt  10042.txt  10043.txt  10044.txt  10045.txt  (+67 more)
data/english/with prefaces/: 10073-8.txt  10083.txt  10095.txt  10114-8.txt
src/: main.py
src/Cpp/: CMakeLists.txt  binds.cpp  debug.cpp  ngramdatabuilder.cpp
src/Cpp/analysis/: NGram.cpp  NGram.h  NGramUtils.h  analysisAbstract.h  indexOfCoincidence.cpp  indexOfCoincidenceOptimal.h
src/Cpp/simulation/: CMakeLists.txt  machine.cpp  machine.h  machine4.cpp  machine4.h  machineSpecification.cpp  machineSpecification.h  machineSpecification4.cpp  plugboard.h  reflector.h  rotor.cpp  rotorSpecification.cpp  rotorSpecification.h  wirings.cpp  wirings.h
src/Cpp/simulation/machineJsons/: enigmaM4.json
src/Cpp/solver/: CMakeLists.txt  solverMachine.cpp  solverMachine.h  solverMachine4.cpp  solverMachine4.h
src/Cpp/utils/: CMakeLists.txt  wiringUtils.cpp
src/Solver/: solve.py
src/Solver/C++/: CMakeLists.txt  binds.cpp  debug.cpp  example.cpp  funcs.cpp  funcs.h  solve.py
src/Solver/Cpp/: CMakeLists.txt  binds.cpp  debug.cpp  funcs.cpp  funcs.h  ngramdatabuilder.cpp
src/Solver/Cpp/analysis/: CMakeLists.txt  NGram.cpp  NGram.h  NGramUtils.h  analysisAbstract.h  indexOfCoincidence.cpp  indexOfCoincidence.h  indexOfCoincidenceOptimal.cpp  indexOfCoincidenceOptimal.h
src/Solver/Cpp/simulation/: CMakeLists.txt  machine.cpp  machine.h  machine4.cpp  machine4.h  machineSpecification.cpp  machineSpecification.h  machineSpecification4.cpp  machineSpecification4.h  plugboard.h  reflector.h  rotor.cpp  rotor.h  rotorSpecification.cpp  rotorSpecification.h  wirings.cpp  wirings.h
src/Solver/Cpp/simulation/machineJsons/: enigmaI.json  enigmaM3.json  enigmaM4.json
src/Solver/Cpp/solver/: CMakeLists.txt  solverMachine.cpp  solverMachine.h  solverMachine4.cpp  solverMachine4.h
src/Solver/Cpp/utils/: utils.h  wiringUtils.cpp
